--- a/src/app/components/step-function-loading-indicator/step-function-loading-indicator.component.html
+++ b/src/app/components/step-function-loading-indicator/step-function-loading-indicator.component.html
@@ -1,1 +1,4 @@
-<p>step-function-loading-indicator works!</p>
+<div class="container">
+    <mat-progress-bar [mode]="mode" value="80"/>
+    <p>{{ statusMessage }}</p>
+</div>
