--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet />
+<!-- <router-outlet /> -->
+<app-step-function-loading-indicator
+  [events]="events()"
+></app-step-function-loading-indicator>
