--- a/src/app/components/step-function-loading-indicator/step-function-loading-indicator.component.html
+++ b/src/app/components/step-function-loading-indicator/step-function-loading-indicator.component.html
@@ -1,4 +1,5 @@
 <div class="container">
-    <mat-progress-bar [mode]="mode" value="80"/>
-    <p>{{ statusMessage }}</p>
+  <mat-progress-bar [mode]="mode" value="80" />
+  <p>Current Task: {{ stepName }}</p>
+  <p>Step: {{ statusMessage }}</p>
 </div>
