--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@use "@angular/material" as mat;
 
+// Customize the entire app. Change :root to your selector if you want to scope the styles.
+:root {
+  @include mat.progress-bar-overrides(
+    (
+      active-indicator-color: skyblue,
+      active-indicator-height: 1rem,
+      track-height: 1rem,
+    )
+  );
+}
 html,
 body {
   height: 100%;
