--- a/src/app/components/linear-loading-indicator/linear-loading-indicator.component.html
+++ b/src/app/components/linear-loading-indicator/linear-loading-indicator.component.html
@@ -1,9 +1,5 @@
 <div class="container">
-  <mat-progress-bar
-    class="rgb-progress"
-    [mode]="mode"
-    [value]="progressPercentage"
-  />
+  <mat-progress-bar [mode]="mode()" [value]="progressPercentage" />
   <p>Current Task: {{ currentStepName }}</p>
   <p>Step: {{ lastEventType }}</p>
 </div>
