--- a/src/app/components/spinner-loading-indicator/spinner-loading-indicator.component.html
+++ b/src/app/components/spinner-loading-indicator/spinner-loading-indicator.component.html
@@ -5,5 +5,5 @@
     [value]="progressPercentage"
   />
   <p>Current Task: {{ currentStepName }}</p>
-  <p>Step: {{ lastEventType }}</p>
+  <p>Step: {{ lastEventType | titleCaseCamel }}</p>
 </div>
