--- a/src/app/components/linear-loading-indicator/linear-loading-indicator.component.html
+++ b/src/app/components/linear-loading-indicator/linear-loading-indicator.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <mat-progress-bar [mode]="mode()" [value]="progressPercentage" />
   <p>Current Task: {{ currentStepName }}</p>
-  <p>Step: {{ lastEventType }}</p>
+  <p>Step: {{ lastEventType | titleCaseCamel }}</p>
 </div>
